eshop-config/base/eshop-namespace.yml
---
apiVersion: v1
kind: Namespace
metadata:
  name: eshop
  labels:
    app.kubernetes.io/name: eshop
    app.kubernetes.io/part-of: cloudopshub
