eshop-config/base/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: authenticwrite
  labels:
    app: authenticwrite
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - authenticwrite.local
    secretName: authenticwrite-tls
  rules:
  - host: authenticwrite.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: frontend
            port:
              number: 80
      - path: /api
        pathType: Prefix
        backend:
          service:
            name: backend
            port:
              number: 5000
